// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownMenu > Basic rendering > renders content when open 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_3_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_2_"
    type="button"
  >
    Open Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > Basic rendering > renders the trigger properly 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="closed"
    id="radix-_r_0_"
    type="button"
  >
    Open Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > Complex dropdown menu > renders all components together properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_2m_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_2l_"
    type="button"
  >
    Complex Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > Content positioning > applies custom className to content 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_35_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_34_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > Content positioning > renders with custom sideOffset 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_32_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_31_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuCheckboxItem > applies custom className 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_17_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_16_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuCheckboxItem > renders checked state properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_11_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_10_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuCheckboxItem > renders unchecked state properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_u_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_t_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuItem > applies custom className 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_r_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_q_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuItem > renders default variant properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_d_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_c_"
    type="button"
  >
    Open Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuItem > renders destructive variant properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_i_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_h_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuItem > renders with inset properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_l_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_k_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuLabel > applies custom className 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_1p_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_1o_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuLabel > renders properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_1l_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_1k_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuLabel > renders with inset properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_1n_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_1m_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuRadioGroup and DropdownMenuRadioItem > applies custom className to radio items 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_1i_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_1h_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuRadioGroup and DropdownMenuRadioItem > renders radio group properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_1a_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_19_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuSeparator > applies custom className 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_1v_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_1u_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuSeparator > renders properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_1r_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_1q_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuShortcut > applies custom className 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_24_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_23_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuShortcut > renders properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_21_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_20_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuSub components > applies custom className to sub components 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_2h_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_2g_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuSub components > renders sub menu properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_27_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_26_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuSub components > renders sub trigger with inset properly 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_2c_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_2b_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > Error handling > handles disabled state 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_3h_"
    aria-expanded="true"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="open"
    id="radix-_r_3g_"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;
